updates from valero-dev: fix maxwidth on tablet breakpoint
# Conflicts:
#	src/styles/_media.scss

--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -1,4 +1,3 @@
-
 @mixin breakpoint($point) {
   @if $point == xldevice {
     @media (min-width: 2200px) {
@@ -9,19 +8,19 @@
       @content;
     }
   } @else if $point == desktop {
-    @media (min-width: 1200px) {
+    @media (min-width: 1200px) and (max-width: 1699.99px) {
       @content;
     }
   } @else if $point == laptop {
-    @media (min-width: 992px) {
+    @media (min-width: 992px) and (max-width: 1199.99px) {
       @content;
     }
   } @else if $point == tablet_land {
-    @media (orientation: landscape) and (min-width: 768px) {
+    @media (orientation: landscape) and (min-width: 768px) and (max-width: 991.99px) {
       @content;
     }
   } @else if $point == tablet_port {
-    @media (orientation: portrait) and (min-width: 768px) {
+    @media (orientation: portrait) and (min-width: 768px) and (max-width: 991.99px) {
       @content;
     }
   } @else if $point == mobile {
@@ -34,5 +33,3 @@
     }
   }
 }
-
-
